# McServer-Launcher-with-noname-yet

./: .envrc  .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.md  README.md  main.py  package-lock.json  pyproject.toml
backend/: root_path.py
backend/server/: server_data.py
data/meta/: downloads.yaml  software.yaml
mcserver/backend/: root_path.py
mcserver/backend/misc/: errors.py
mcserver/backend/server/: server.py  server_data.py
mcserver/webui/: home.py  main.py  menu.py  theme.py
src/mcserver/: cli.py  errors.py  gui_interface.py  settings.py
src/mcserver/backend/: data.py  downloader.py  root_path.py  server.py  server_manager.py  software.py
src/mcserver/backend/misc/: errors.py
src/mcserver/backend/server/: server.py  server_data.py
src/mcserver/webui/: debug.py  home.py  index.py
tests/: test_jar_download.py  test_server_creation.py  test_server_creation_deletion.py  test_server_deletion.py
