[project]
name = "minecraft-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nicegui>=2.20.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"