[project]
name = "minecraft-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "nicegui>=2.20.0",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.2",
]

[project.scripts]
mcserver = "mcserver.cli:main"


[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
